--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -1,1 +1,6 @@
-<p>post works!</p>
+<h4>
+ Post id: {{post.id}}
+</h4>
+<p>title : {{post.title}}</p>
+  <a [routerLink]="['post-details', post.id]" [state]="{data:post}" >details</a>
+<hr>
