--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,1 +1,8 @@
-<p>user works!</p>
+<p>
+  {{user.id}} -
+  {{user.name}}
+<!--  <a routerLink="user-details/{{user.id}}">details</a>-->
+
+  <a [routerLink]="['user-details',user.id]" [state]="{data:user}">details</a>
+</p>
+
