--- a/src/app/app-components/header/header.component.css
+++ b/src/app/app-components/header/header.component.css
@@ -4,6 +4,6 @@
   justify-content: space-evenly;
   align-items: center;
   font-size: 24px;
-  background-color: coral;
+  background-color: aqua;
 }
 
