--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,5 +1,5 @@
 <p>Id: {{user.id}}</p>
 <p>Name: {{user.name}}</p>
 <p>Email: {{user.email}}</p>
-<button (click)="emit()">Chose this</button>
+<button (click)="saveToStorage()" >Chose this</button>
 <hr>
